bk_ida/gccida/g1/alter_subreg
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/alter_subreg/src/final.c:3202:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v2.rtwint = ( __int64)( *xp)->fld[0]; 
                      ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/alter_subreg/src/final.c:3205:47: error: use of undeclared identifier 'machine_mode'
*xp = adjust_address_1( ( *xp)->fld[0].rtx, ( machine_mode)*( ( unsigned __int8 *)v1 + 2), *( _DWORD *)&v1[1], 1, 1); 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/alter_subreg/src/final.c:3210:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v1 + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/alter_subreg/src/final.c:3212:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v2.rtwint + 2), 
  ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/alter_subreg/src/obj/final.o] Error 1
